--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pep8==1.7.0
 pyflakes==1.0.0
 Pygments==2.1.1
 python-dateutil==2.4.2
+python-slugify==1.2.0
 pytz==2015.7
 six==1.10.0
 Unidecode==0.4.19
