--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,1 @@
-blinker==1.4
-docutils==0.12
-feedgenerator==1.7
-flake8==2.5.4
-ghp-import==0.4.1
-Jinja2==2.8
-Markdown==2.6.5
-MarkupSafe==0.23
-mccabe==0.4.0
-pelican==3.6.3
-pep8==1.7.0
-pyflakes==1.0.0
-Pygments==2.1.1
-python-dateutil==2.4.2
-python-slugify==1.2.0
-pytz==2015.7
-six==1.10.0
-Unidecode==0.4.19
+danube_delta
