--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
     - "3.5"
-install:
-    - "pip install -r requirements.txt"
+cache: pip
 script:
     - "blog lint"
 env:
