--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: "python"
 python:
     - "3.5"
 cache: "pip"
+before_install:
+    # Installing Czech LOCALE - https://docs.travis-ci.com/user/common-build-problems/#System%3A-Required-language-pack-isn%E2%80%99t-installed
+    - sudo apt-get update
+    - sudo apt-get --reinstall install -qq language-pack-en language-pack-cs
 script:
     - "blog lint"
 env:
