Locale is needed for correct date time formatting

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
-sudo: false
+sudo: "required"
+dist: "trusty"
 language: "python"
 python: "3.5"
 cache: "pip"
+before_install:
+  # Installing Czech LOCALE - https://docs.travis-ci.com/user/common-build-problems/#System%3A-Required-language-pack-isn%E2%80%99t-installed
+  - sudo apt-get update
+  - sudo apt-get --reinstall install -qq language-pack-en language-pack-cs
 script:
   - "blog lint"
 env:
